--- a/authors/templates/authors/partials/profiles/recpt_profile_tabs.html
+++ b/authors/templates/authors/partials/profiles/recpt_profile_tabs.html
@@ -44,6 +44,7 @@
 
         <div class="content" id="registered-patients-recpt">
             <div class="infos">
+                {% if patients %}
                 <div class="patients-created-list">
 
                     {% for patient in patients %}
@@ -69,6 +70,9 @@
 
                     {% endfor %}                    
                 </div>
+                {% else %}
+                
+                {% endif %}
             </div>
         </div>        
     </div>
