Fixing 'ah' ico in whole website

--- a/base_templates/global/partials/head.html
+++ b/base_templates/global/partials/head.html
@@ -20,6 +20,6 @@
 
 <link rel="stylesheet" href="{% static 'global/css/styles.css' %}">
 <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
-<link rel="shortcut icon" href="media/ico/ah-ico.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/media/ico/ah-ico.ico" type="image/x-icon">
 <script src="{% static 'global/js/jquery-3.7.1.min.js' %}"></script>
 
