--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -868,8 +868,19 @@ h5 {
 
 .state-select-patient { 
     padding: 1rem;
+    width: 100%;
     border-radius: 0.4rem;
     border: 1px solid var(--color-primary-dark);
+}
+.city-select-patient {
+    padding: 1rem;
+    width: 100%;
+    border-radius: 0.4rem;
+    border: 1px solid var(--color-primary-dark);
+}
+.date-form-patient{
+    font-family: var(--font-primary);
+    color: var(--color-primary-dark);
 }
 
 .btn-register {
