--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -605,12 +605,19 @@ h5 {
 }
 
 #search_date {
-    color: var(--color-dark-text);
+    color: var(--color-primary-dark);
     font-size: 1.5rem;
+    padding: 0.5rem;
+    width: 100%;
+    font-family: var(--font-primary);
     background-color: var(--color-gray-1);
     border: 1px solid var(--color-primary-dark);
-    border-radius: 5px;
+    border-radius: 0.4rem;
 } 
+#search-date:focus-within {
+    border-color: var(--color-primary);
+    background: var(--color-white);
+}
 
 #combined-search-button {
     font-size: 1.4rem;   
