--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -427,14 +427,19 @@ h5 {
 .patient-content-profile-detail{
     margin: 0 auto;
     width: 50%;
-    padding-bottom: 5rem;
+    padding-bottom: 2rem;
 }
 .patient-content-profile-detail p{
     display: flex;
     justify-content: space-between;
     padding: 0.6rem;
+    color: var(--color-gray-6);
     background: #f9f9f9;
     border-radius: 0.6rem;
+}
+.patient-content-profile-detail strong {
+    font-size: 1.6rem;
+    color: var(--color-primary-dark);
 }
 
 .patient-content p {
@@ -1333,6 +1338,21 @@ h5 {
         max-width: 100%;
         max-height: 100%;
     }
+    
+     /*Detalhes perfil de paciente*/
+     .patient-content-profile-detail{
+        margin: 0 auto;
+        width: 100%;
+        padding-bottom: 5rem;
+    }
+    .patient-content-profile-detail p{
+        display: flex;
+        padding-bottom: 1rem;
+    }
+    .patient-content-profile-detail strong{
+        margin-bottom: 1rem;
+        font-size: 1.6rem;
+    }
 
     /* My profile tabs*/
     .tab-data-right {
@@ -1410,6 +1430,22 @@ h5 {
         max-width: 100%;
         max-height: 100%;
     }
+
+    /*Detalhes perfil de paciente*/
+    .patient-content-profile-detail{
+        margin: 0 auto;
+        width: 100%;
+        padding-bottom: 5rem;
+    }
+    .patient-content-profile-detail p{
+        display: flex;
+        padding-bottom: 1rem;
+    }
+    .patient-content-profile-detail strong{
+        margin-bottom: 1rem;
+        font-size: 1.6rem;
+    }
+
 
     /*Menu*/
     .menu-nav a {
@@ -1591,6 +1627,19 @@ h5 {
         margin-top: 2rem;
         padding: 1.7rem;
     }
+    .patient-content-profile-detail{
+        margin: 0 auto;
+        width: 100%;
+        padding-bottom: 2rem;
+    }
+    .patient-content-profile-detail p{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 1rem;
+    }
+    .patient-content-profile-detail strong{
+        margin-bottom: 1rem;
+    }
     
     /* My profile tabs*/
     .field {
@@ -1758,7 +1807,20 @@ h5 {
         margin-top: 2rem;
         padding: 1.7rem;
     }
-
+    .patient-content-profile-detail{
+        margin: 0 auto;
+        width: 100%;
+        padding-bottom: 5rem;
+    }
+    .patient-content-profile-detail p{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 1rem;
+    }
+    .patient-content-profile-detail strong{
+        margin-bottom: 1rem;
+        font-size: 1.6rem;
+    }
      /*Footer*/
     .main-footer {
         font-size: 1.1rem;
