--- a/lab/templates/lab/partials/report_searched_partial.html
+++ b/lab/templates/lab/partials/report_searched_partial.html
@@ -1,9 +1,9 @@
 <div class="report report-list-search">
     <div class="report-content">
 
-            <p> <strong> CPF do paciente: </strong></p> {{ report.cpf }} 
-            <p> <strong> nome do paciente: </strong></p> {{ report.name }} 
-            <p><strong>Data do Envio:</strong> </p> {{ report.created_at }}
+            <p> <strong> CPF do paciente: </strong> <br>{{ report.cpf }}  </p>
+            <p> <strong> nome do paciente: </strong> <br> {{ report.name }} </p>
+            <p><strong>Data do Envio:</strong> <br> {{ report.created_at }} </p>
         <div class="report-user-access-container">
             <a href= {% url "lab:report_detail" report_id=report.id  %} class="report-user-access-btn"> <!-- link para report_detail, provavelmente irá precisar de id -->
                 Detalhes <i class='bx bxs-binoculars'></i> 
