--- a/lab/templates/lab/pages/about.html
+++ b/lab/templates/lab/pages/about.html
@@ -1,4 +1,5 @@
 {% extends 'global/base.html' %}    
+{% load static %}
 
 {% block title %}Home |{% endblock title %}
 
@@ -22,8 +23,10 @@
                     </p>
                 </div>
             </div>
-
-            <h2>Como funciona esse sistema?</h2>
+            <div class="subtitle-about">
+                <h2>Como funciona esse sistema?</h2>
+                <div class="line"></div>
+            </div>
             <div class="system-funcionality">
                 <p>Esse sistema foi criado para ser usado em um controle de laboratório que realiza exames de sangue, com diversas de funcionalidades
                     incluídas:
@@ -38,81 +41,7 @@
             </div>
 
             <h2>Como são as permissões de usuários?</h2>
-            <div class="system-user-permissions">
-                <p>No sistema existem 4 tipos de usuários que podem ser criados e utilizados:</p><br>
-
-                <div class="abt-patient-permissions pms-space">
-                    <strong>Pacientes</strong>
-                    <p class="able-to"> O que é liberado:</p>
-                    <div class="list-permissions">
-                        <li>Consulta de laudos que foram criados com seu CPF ou nome de cadastro</li>
-                        <li>Visualização de seus dados pessoais</li>
-                        <li>Alteração de senha do perfil</li>
-                    </div>
-
-                    <p class="enable-to"> O que não é liberado:</p>
-                    <li>Visualização de qualquer outro perfil, desde dados, laudos, etc</li>
-                    <li>Tudo aquilo que os usuários abaixo tem permissão</li>
-                </div>
-
-                <div class="abt-recpt-permissions pms-space">
-                    <strong>Recepcionistas</strong>
-
-                    <p class="able-to"> O que é liberado:</p>
-                    <div class="list-permissions">
-                        <li>Cadastro de usuários pacientes</li>
-                        <li>Alterações de dados pessoais de pacientes (mediante a solicitação do mesmo, tal como endereço, por exemplo)</li>
-                        <li>Consulta de laudos já existentes no sistema</li>
-                        <li>Visualização dos detalhes de laudos criados no sistema</li>
-                        <li>Pesquisa de pacientes</li>
-                        <li>Visualização geral de qualquer perfil do tipo 'paciente'</li>
-                        <li>Visualização de seus dados pessoais</li>
-                        <li>Alteração de senha do seu perfil</li>
-                        <li>Visualização de pacientes cadastrados pelo seu perfil</li>
-                    </div>
-
-                    <p class="enable-to"> O que não é liberado:</p> 
-                    <div class="list-permissions">
-                        <li>Cadastro de usuários técnicos e administradores</li>
-                        <li>Envio de imagens para geração de laudo de hemograma</li>
-                        <li>Alteração de senhas de qualquer outro perfil</li>
-                    </div>
-                </div>
-                        
-                <div class="abt-tec-permissions pms-space">
-                    <strong>Técnicos</strong>
-
-                    <p class="able-to"> O que é liberado:</p>
-                    <div class="list-permissions">
-                        <li>Envio de imagens para serem analisadas</li>                    
-                        <li>Consulta de laudos já existentes no sistema</li>
-                        <li>Visualização dos detalhes de laudos criados no sistema</li>
-                        <li>Pesquisa de pacientes</li>
-                        <li>Visualização geral de qualquer perfil do tipo 'paciente'</li>
-                        <li>Alteração de senha próprio</li>
-                        <li>Visualização de seus dados pessoais</li>
-                        <li>Visualização de laudos gerados pelo seu perfil</li>
-                    </div>
-
-                    <p class="enable-to"> O que não é liberado:</p> 
-                    <div class="list-permissions">
-                        <li>Cadastro de qualquer tipo de usuário</li>
-                        <li>Alteração de dados de pacientes</li>
-                        <li>Alteração de senhas de qualquer outro perfil</li>
-                    </div>
-                </div>
-
-                <div class="abt-adm-permissions">
-                    <strong>Administradores</strong>
-                    <p class="able-to"> O que é liberado:</p>
-                    <div class="list-permissions">
-                        <li>Todas as funcionalidades do sistema</li>    
-                    </div>                
-                </div>
-                    
-                
-
-            </div>
+            {% include "lab/partials/tab_user_permissions.html" %}
 
             <h2>Qual o objetivo deste sistema?</h2>
             <div class="system-goals">
@@ -145,4 +74,5 @@
                    
         </div>
     </div>
+    <script src="{% static 'global/js/profile_tab.js' %}"></script>
 {% endblock content %}
