--- a/lab/templates/lab/pages/about.html
+++ b/lab/templates/lab/pages/about.html
@@ -6,8 +6,10 @@
 {% block content %}
     <div class="main-content container">
         <div class="about-container">
-
-            <h2>Quem desenvolveu o sistema?</h2>
+            <div class="subtitle-about">
+                <h2>Quem desenvolveu o sistema?</h2>
+                <div class="line"></div>
+            </div>
             <div class="who-created">
                 <div class="about-image-container">
                     <img src="/media/lab/logo/heliel.png" alt="titulo">  
@@ -28,7 +30,8 @@
                 <div class="line"></div>
             </div>
             <div class="system-funcionality">
-                <p>Esse sistema foi criado para ser usado em um controle de laboratório que realiza exames de sangue, com diversas de funcionalidades
+                <p>Esse sistema foi criado para ser usado em um controle de laboratório que realiza exames de sangue, 
+                    com diversas funcionalidades
                     incluídas:
                     <div class="list">
                         <li> Geração de laudos de hemograma através de imagens microscópicas com um modelo de IA treinado;</li>
@@ -39,37 +42,46 @@
                     </div>
                 </p>
             </div>
-
-            <h2>Como são as permissões de usuários?</h2>
+            <div class="subtitle-about">
+                <h2>Como são as permissões de usuários?</h2>
+                <div class="line"></div>
+            </div>  
+            
             {% include "lab/partials/tab_user_permissions.html" %}
-
-            <h2>Qual o objetivo deste sistema?</h2>
+                
+            <div class="subtitle-about">
+                <h2>Qual o objetivo deste sistema?</h2>
+                <div class="line"></div>
+            </div>  
             <div class="system-goals">
                <p> O maior objetivo desse sistema é aprimorar a fase introdutória de uma realização de exame sanguíneo, 
                 retornando em questões de segundos o resultado em forma de hemograma de uma análise de uma imagem de sangue microscópica.
                 </p><br>
                 <p>Além disso, com base nos tipos de usuários que podem ser criados, as permissões de acesso e funções dentro do sistema,
                     junto ao design simples e limpo, trazem uma dinânica maior ao controle de laudos, pacientes, atividades internas e muito mais
-                </p><br>
-            
-                Esse sistema tem 3 tipos de usuários a serem cadastrados:
-                <strong>Técnico</strong>: responsável por enviar imagens ao sistema e realizar a geração dos laudos de imagens sanguíneas. <br>
-                <strong>Recepcionista</strong>: Responsável pelo cadastro de pacientes, alteração de dados, consulta de laudos gerados. <br>
-                <strong>Paciente</strong>: Paciente é o usuário que terá seus dados pessoais coletados para seu cadastro e terá um laudo gerado por conta de seu sangue.
-            
-                <p>Existe uma inteligência artificial de detecção de objetos por trás desse sistema, onde um há um peso treinado com mais de 400 imagens sanguíneas
-                de um data-set, com um algoritmo de visão computacional de rede neural convolucional (RNN) chamado <strong> YOLO </strong>(You Once Look Once).
-                
-                Esse modelo levou mais de 14 horas para ser trainado no google Colab, onde todas as imagens do data-set foram rotuladas manualmente, para que a máquina aprendesse
-                a identificar padrões e buscar melhor sua taxa de confiança, até gerar o melhor peso pré-trainado para ser ajustado e utilizado como inferência nesse sistema.
-            </div>
-
-            <h2>Como o projeto foi desenvolvido?</h2>
-            <div class="system-tecs">
-                <p>O projeto majoritariamente foi desenvolvido no Framework <strong>Django</strong>, framework escrito em python que permite a criação de sistemas web escaláveis e robustos.
-                Além disso, foram usadas tecnologias como <strong> HTML, CSS e JavaScript, Jquery, AJAX</strong> para algumas estilizações e detalhes da estrutura da página. outros frameworks, linguagens e algoritmos
-                também fora utilizados nesse sistema, mas logo adiante serão explicados em detalhes. 
                 </p>
+        
+            </div>
+            <div class="subtitle-about">
+                <h2>Tecnologias utilizadas</h2> 
+                <div class="line"></div>
+            </div>  
+            <div class="system-tecs">
+                <p><strong>Django</strong>: O projeto majoritariamente foi desenvolvido neste framework, 
+                que é escrito em python no qual a criação de aplicações web tanto no lado do servidor
+                quanto no lado do cliente. A escolha foi para concatenar com a IA que utilizei, também escrita em python.
+                </p><br>
+                <p><strong> YOLO (You Only Look Once)</strong>: Algoritmo de detecção de objetos de interesse em cena. 
+                    Esse algoritmo foi usado para treinar um DataSet de mais de 400 imagens sanguíneas no Google Colab que tiveram bounding-boxes
+                    criados manualmente. 
+                    o YOLO utiliza a arquitetura de rede neural conhecida como CNN (Convolutional Neural Network) para realizar 
+                    a detecção de objetos. As CNNs são especialmente adequadas para tarefas de visão computacional, pois são capazes 
+                    de aprender representações hierárquicas de características em imagens, o que as torna muito eficazes na detecção
+                    e classificação de objetos. 
+                </p><br>
+                <p><strong>Darknet</strong>: Framework utilizado para treinar o modelo utilizando YOLO com algoritmo.</p><br>
+                <p><strong>JavaScript, Jquery, AJAX</strong>: Utilizadas para aperfeiçoar a interação com o usuário.</p><br>
+                <p><strong>HTML e CSS</strong>: Usadas para estrutração e estilização da página.</p><br>               
             </div>
                    
         </div>
